--- a/styles.css
+++ b/styles.css
@@ -115,74 +115,65 @@ img {
     opacity: 0.8;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1380px) {
+    .caixa-menu {
+        display: block;
+        height: 20%;
+        width: 100%;
+    }
+
     a {
         display: none;
     }
 
-    header {
-        margin: 0;
-        padding: 0;
-        width: 200vw;
-        height: 10vh;
+    h2 {
+        width: 25px;
+        height: 10px;
+        font-size: 20px;
     }
 
     .button-login {
-        width: 150px;
-        height: 35px;
+        width: 135px;
+        height: 55px;
+        margin-left: 10px;
     }
 
-    h2 {
-        width: 150px;
-        height: 35px; 
-    }
-
-
-    main {
-        display: block;
-        margin: 0;
-        padding: 0;
-        width: 200vw;
-        height: 200vh;
-    }
-
-    h1 {
-        margin: 10px;
-        padding: 0;
-        position: static;
-        width: 40px;
-        line-height: 2;
-        font-size: 50px;
-        text-align: center;
+    .principal {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        flex-direction: column;
     }
 
     p {
-        margin: 7%;
+        display: none;
+    }
+
+    h1{
         position: static;
-        height: 0px;
-        font-size: 20px;
-        width: 350px;
-        height: 50px;
-        text-align: center;
+        width: 10px;
+        line-height: 4;
+        font-size: 30px;
+        text-align: justify;
+        display: contents;
     }
 
     img{
-        width: 400px;
-        position: static;
+        width: 300px;
         display: block;
-        margin-left: 50px;
-
+        position: static;
+        flex-direction: column;
+        align-items: center;
     }
 
     .button-façaparte{
-         width: 220px;
-        height: 50px;
-        text-align: justify;
+        width: 250px;
+        height: 60px;
         display: block;
-        margin-left: 130px;
-        margin-top: 230px;
-
+       margin-left: 0px;
+        margin-top: 0px; 
+        align-items: center;
     }
-    }
+}
 
-    
